--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0.0</version>
     <modules>
         <module>collapse-executor-core</module>
+        <module>collapse-executor-spring-boot</module>
+        <module>collapse-executor-samples</module>
     </modules>
 
     <properties>
