--- a/collapse-executor-integration/pom.xml
+++ b/collapse-executor-integration/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>collapse-executor</artifactId>
-        <groupId>cn.icodening.tools</groupId>
+        <groupId>cn.icodening</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
