--- a/collapse-executor-samples/collapse-executor-sample-spring-boot/pom.xml
+++ b/collapse-executor-samples/collapse-executor-sample-spring-boot/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>collapse-executor-samples</artifactId>
-        <groupId>cn.icodening.tools</groupId>
+        <groupId>cn.icodening</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,7 +19,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.icodening.tools</groupId>
+            <groupId>cn.icodening</groupId>
             <artifactId>collapse-executor-spring-boot</artifactId>
             <version>${project.version}</version>
         </dependency>
