--- a/collapse-executor-samples/pom.xml
+++ b/collapse-executor-samples/pom.xml
@@ -13,12 +13,14 @@
     <packaging>pom</packaging>
     <modules>
         <module>collapse-executor-sample-spring-boot</module>
+        <module>collapse-executor-sample-simple</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.boot.version>2.7.11</spring.boot.version>
     </properties>
 
 
@@ -27,7 +29,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.7.11</version>
+                <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
