--- a/collapse-executor-integration/collapse-executor-spring-boot/pom.xml
+++ b/collapse-executor-integration/collapse-executor-spring-boot/pom.xml
@@ -31,6 +31,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
             <scope>compile</scope>
             <optional>true</optional>
