--- a/collapse-executor-samples/pom.xml
+++ b/collapse-executor-samples/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>collapse-executor-sample-spring-boot</module>
         <module>collapse-executor-sample-simple</module>
+        <module>collapse-executor-sample-advanced</module>
     </modules>
 
     <properties>
