add RestTemplate and WebClient invoke sample

--- a/collapse-executor-samples/collapse-executor-sample-spring-boot/src/main/resources/application.yaml
+++ b/collapse-executor-samples/collapse-executor-sample-spring-boot/src/main/resources/application.yaml
@@ -29,6 +29,7 @@ collapse:
       collapse-groups:
         - uris:
             - /user/*
+            - /test/noop*
 
     #[WebClient] collapse request configuration
     web-client:
@@ -36,3 +37,4 @@ collapse:
       collapse-groups:
         - uris:
             - /user/*
+            - /test/noop*
