support aopalliance and aspectj

--- a/collapse-executor-integration/pom.xml
+++ b/collapse-executor-integration/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>collapse-executor-spring-boot</module>
+        <module>collapse-executor-aop</module>
     </modules>
 
     <properties>
