--- a/collapse-executor-integration/collapse-executor-spring-boot/pom.xml
+++ b/collapse-executor-integration/collapse-executor-spring-boot/pom.xml
@@ -24,6 +24,12 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>cn.icodening</groupId>
+            <artifactId>collapse-executor-aop</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>compile</scope>
