--- a/collapse-executor-integration/collapse-executor-spring-boot-autoconfigure/pom.xml
+++ b/collapse-executor-integration/collapse-executor-spring-boot-autoconfigure/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>collapse-executor-spring-boot</artifactId>
+    <artifactId>collapse-executor-spring-boot-autoconfigure</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -20,7 +20,12 @@
     <dependencies>
         <dependency>
             <groupId>cn.icodening</groupId>
-            <artifactId>collapse-executor-core</artifactId>
+            <artifactId>collapse-executor-aop</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.icodening</groupId>
+            <artifactId>collapse-executor-spring-boot</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -30,12 +35,25 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-        <dependency>
+         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
 </project>
