--- a/collapse-executor-integration/pom.xml
+++ b/collapse-executor-integration/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>collapse-executor-spring-boot</module>
         <module>collapse-executor-aop</module>
+        <module>collapse-executor-spring-boot-autoconfigure</module>
     </modules>
 
     <properties>
