--- a/collapse-executor-integration/collapse-executor-pattern/pom.xml
+++ b/collapse-executor-integration/collapse-executor-pattern/pom.xml
@@ -9,10 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>collapse-executor-aop</artifactId>
+    <artifactId>collapse-executor-pattern</artifactId>
 
     <properties>
-        <aopalliance.version>1.0</aopalliance.version>
     </properties>
 
     <dependencies>
@@ -20,15 +19,6 @@
             <groupId>cn.icodening</groupId>
             <artifactId>collapse-executor-core</artifactId>
             <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>aopalliance</groupId>
-            <artifactId>aopalliance</artifactId>
-            <version>${aopalliance.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
         </dependency>
     </dependencies>
 </project>
