--- a/collapse-executor-integration/collapse-executor-spring-web/pom.xml
+++ b/collapse-executor-integration/collapse-executor-spring-web/pom.xml
@@ -11,32 +11,18 @@
 
     <artifactId>collapse-executor-spring-web</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>cn.icodening</groupId>
             <artifactId>collapse-executor-core</artifactId>
             <version>${project.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-            <scope>compile</scope>
-            <optional>true</optional>
+            <groupId>cn.icodening</groupId>
+            <artifactId>collapse-executor-pattern</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webflux</artifactId>
