--- a/collapse-executor-integration/pom.xml
+++ b/collapse-executor-integration/pom.xml
@@ -15,12 +15,11 @@
         <module>collapse-executor-spring-web</module>
         <module>collapse-executor-aop</module>
         <module>collapse-executor-spring-boot-autoconfigure</module>
+        <module>collapse-executor-servlet</module>
+        <module>collapse-executor-pattern</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>2.7.11</spring.boot.version>
     </properties>
 
