--- a/collapse-executor-integration/collapse-executor-spring-boot-autoconfigure/pom.xml
+++ b/collapse-executor-integration/collapse-executor-spring-boot-autoconfigure/pom.xml
@@ -48,6 +48,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jetty</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <scope>compile</scope>
             <optional>true</optional>
