add regex support

--- a/collapse-executor-integration/collapse-executor-servlet/pom.xml
+++ b/collapse-executor-integration/collapse-executor-servlet/pom.xml
@@ -21,8 +21,7 @@
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
-            <scope>compile</scope>
-            <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
