--- a/collapse-executor-integration/collapse-executor-spring-web/pom.xml
+++ b/collapse-executor-integration/collapse-executor-spring-web/pom.xml
@@ -26,8 +26,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webflux</artifactId>
-            <scope>compile</scope>
-            <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
