--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
-
+.idea
+.vscode
 # Eclipse m2e generated files
 # Eclipse Core
 .project
