support intercepting specified RestTemplate

--- a/collapse-executor-samples/collapse-executor-sample-spring-boot/src/main/resources/application.yaml
+++ b/collapse-executor-samples/collapse-executor-sample-spring-boot/src/main/resources/application.yaml
@@ -29,6 +29,7 @@ collapse:
     #[RestTemplate] collapse request configuration
     rest-template:
       enabled: true
+      apply-bean-names: restTemplate
       collapse-policies:
         sample-policy:
           collapse-request-headers:
