1.module rename 2.fix autoconfiguration not found

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.icodening</groupId>
-    <artifactId>collapse-executor</artifactId>
+    <groupId>com.icodening.collapse</groupId>
+    <artifactId>collapse-executor-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0</version>
     <modules>
