--- a/collapse-executor-integration/collapse-executor-spring-boot-autoconfigure/pom.xml
+++ b/collapse-executor-integration/collapse-executor-spring-boot-autoconfigure/pom.xml
@@ -19,7 +19,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>collapse-executor-integration</artifactId>
-        <groupId>com.icodening</groupId>
+        <groupId>com.icodening.collapse</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -28,17 +28,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.icodening</groupId>
+            <groupId>com.icodening.collapse</groupId>
             <artifactId>collapse-executor-aop</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.icodening</groupId>
+            <groupId>com.icodening.collapse</groupId>
             <artifactId>collapse-executor-spring-web</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.icodening</groupId>
+            <groupId>com.icodening.collapse</groupId>
             <artifactId>collapse-executor-servlet</artifactId>
             <version>${project.version}</version>
         </dependency>
